# Fahrdynamik_Identifikation

./: README.md
devel/: .catkin  .rosinstall  setup.sh
param/systemidentifikation/: default.yaml  free_ride_mode.yaml  obstacle_mode.yaml  parking_mode.yaml
src/systemidentifikation/: CMakeLists.txt  systemidentifikation.cpp  systemidentifikation.h  systemidentifikation_node.cpp  systemidentifikation_node.h
systemidentifikation/: Systemidentifikation.m  Systemidentifikation1.txt
